# openqpcr

./: .gitignore  Cargo.toml  FILEFORMATS.md  Makefile  README.md
.github/workflows/: build-artifacts.yml
docs/: optics-sources.md
docs/sample-sources/: agilent-jena-mic.md  rdml-and-open-datasets.md  roche-qiagen.md  thermo-abi.md
examples/: gen_demo_export.py
examples/demo_export/: demo - Melt Curve Derivative Results_FAM.csv  demo - Melt Curve Derivative Results_HEX.csv  demo - Melt Curve Peak Results.csv  demo - Melt Curve RFU Results_FAM.csv  demo - Melt Curve RFU Results_HEX.csv  demo - Quantification Amplification Results_FAM.csv  demo - Quantification Amplification Results_HEX.csv  demo - Quantification Cq Results.csv
gui/: Cargo.toml
gui/src/: main.rs
gui/ui/: app.slint  chart.slint  plate.slint  table.slint  theme.slint  types.slint
packaging/: openqpcr.desktop
scripts/: README.md  build-macos-app.sh
src/: analysis.rs  cq.rs  edit.rs  error.rs  lib.rs  model.rs  optics.rs  protocol.rs  protocol_edit.rs  stdcurve.rs
src/instrument/: mod.rs  replay.rs  simulated.rs
src/readers/: csv_writer.rs  export.rs  json.rs  mod.rs  pcrd.rs  rdml.rs  registry.rs
tests/: acquisition.rs  export_integration.rs  golden.rs  json_roundtrip.rs  rdml_integration.rs
tests/fixtures/: demo_export.golden.json
tests/fixtures/cfx_export/: exp - Melt Curve Derivative Results_SYBR.csv  exp - Quantification Amplification Results_SYBR.csv  exp - Quantification Cq Results.csv
