[workspace]
members = [".", "gui"]

[package]
name = "openqpcr"
version = "0.1.0"
edition = "2024"
description = "Reader for Bio-Rad CFX (Connect / Duet / Opus) real-time PCR data files and exports"
license = "MIT"
repository = "https://github.com/henriksson-lab/openqpcr"
homepage = "https://github.com/henriksson-lab/openqpcr"

[lib]
name = "openqpcr"
path = "src/lib.rs"

[[bin]]
name = "openqpcr"
path = "src/bin/openqpcr.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
csv = "1"
calamine = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
